2007-01-29  Philip Van Hoof  <pvanhoof@gnome.org>

	* Finally, asynchronously connecting. Though, it's experimental.

2007-01-28  Philip Van Hoof  <pvanhoof@gnome.org>

	* Lots of small bugfixes and testing. Also a few code boutifications

2007-01-27  Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>

	* Added some temporary hack for the pop3 provider to not
	  crash; this will be replaced by a real solution later, but for now
	  we just don't want the crashes.

2007-01-27  Philip Van Hoof  <pvanhoof@gnome.org>

	* First LEMONADE feature, implemented support for the CONDSTORE 
	capability in camel-lite's IMAP provider (RFC 4551)
	* Changed some things about connecting, including the introduction of
	a new api tny_account_try_connect. All this connecting stuff is yet
	uncertain though.

	* This was a major API change

2007-01-26  Philip Van Hoof  <pvanhoof@gnome.org>

	* Added the tny_account_set/get_mech API

	* This was a major API change

2007-01-26  Sergio Villar Senin <svillar@igalia.com>

	* Fixed the implementation of tny_camel_header_get_xxx methods. Now
	they return NULL whenever an error happens (or if the attribute hasn't
	a value yet) instead of the string "Invalid". The documentation has
	been updated also.

2007-01-26  Philip Van Hoof  <pvanhoof@gnome.org>

	* Renamed tny_folder_expunge to tny_folder_sync, and made it possible
	to sync without expunging

	* This was a major API change

2007-01-25  Sergio Villar Senin <svillar@igalia.com>

	* Fixed a comparison in an if statement

2007-01-25 Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>

	* Added TNY_FOLDER_TYPE_ARCHIVE and TNY_FOLDER_TYPE_NUM

2007-01-25  Philip Van Hoof  <pvanhoof@gnome.org>

	* Added a CamelStreamGZip which might someday be used to support the
	COMPRESS capability of some LEMONADE-enabled IMAP servers. This new
	type is experimental and not sufficiently tested for real use.

2007-01-24  Sergio Villar Senin <svillar@igalia.com>

	* libtinymail-camel/tny-camel-mime-part.c: added a missing unlock