@@ -6,7 +6,8 @@ INCLUDES = -I. -I$(top_srcdir) \
 	-I$(top_srcdir)/libtinymailui-gtk \
 	-I$(top_srcdir)/libtinymail-camel \
 	-I$(top_srcdir)/libtinymail-camel/camel-lite \
-	-I$(top_srcdir)/libtinymail-gnomevfs 
+	-I$(top_srcdir)/libtinymail-gnomevfs \
+	-DDBUS_API_SUBJECT_TO_CHANGE
 
 
 lib_LTLIBRARIES = libtinymail-maemo-1.0.la
